# Life-Data-Unifier

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  extractor.py  gcal.py  gmail.py  google_auth.py  main.py  models.py  pipeline.py  timeparse.py
app/static/: styles.css
app/templates/: index.html  obligation.html  obligations.html
data/: .gitkeep
