[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-data-unifier"
version = "0.1.0"
description = "Local-first commitments extractor from Gmail and Google Calendar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "itsdangerous",
  "python-dotenv",
  "httpx",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
]

[tool.setuptools]
packages = ["app"]
